# kak_plugins

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  README.rst  mypy.ini  plugins.toml  pyproject.toml
.github/workflows/: release.yml  tests.yml  typecheck.yml
kak_plugins/: github_permalink.py
kak_plugins/apis/: git.py
src/kak_plugins/: __init__.py  github_permalink.py  interfaces.py  line_range.py  os.py
src/kak_plugins/apis/: clipboard.py  git.py  kak.py
src/kak_plugins/utils/: config.py  os.py
tests/: fakes.py  test_github_permalink.py  test_kak_plugins.py  test_line_range.py  test_os.py
tests/apis/: test_clipboard.py  test_git.py  test_kak.py
tests/learning/: test_abc.py  test_namedtuple.py  test_subprocess.py
tests/utils/: test_config.py  test_line_range.py  test_os.py
