[tool.poetry]
name = "kak_plugins"
version = "0.1.0"
description = ""
authors = ["abstractlyZach <zach3lee@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/abstractlyZach/kak_plugins"
repository = "https://github.com/abstractlyZach/kak_plugins"
keywords = ["kakoune", "plugin"]

[tool.poetry.dependencies]
python = "^3.9"
GitPython = "^3.1.14"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
reorder-python-imports = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
github-permalink = "kak_plugins.github_permalink:main"
